fixed a typo with the quiz question

--- a/views/pages/quiz.handlebars
+++ b/views/pages/quiz.handlebars
@@ -54,7 +54,7 @@
             <option value="activityboth">It depends on my mood. I like to be busy but also take time to relax</option>
         </select>
 
-		<label for="fam" id="famInput">Which best describes how you would spend your free time?</label>
+		<label for="fam" id="famInput">Who would the dog be spending the most time with?</label>
         <select id="fam" name="fam">
             <option value="me">Just me, I live at my own place!</option>
             <option value="nokid">Me and my family, but everyone is grown up!</option>
