--- a/views/pages/settings.handlebars
+++ b/views/pages/settings.handlebars
@@ -5,5 +5,10 @@
         <p>Email: {{{email}}}</p>
         <p>Age: {{{age}}}</p>
 
+    	{{#if taken}}
+            <p>You either put in an email that was taken or you did not put in new input.<br>
+            Feel free to click the link below and try again!</p>
+	    {{/if}}
+
     <a href="/account/settings/edit">Any wrong information? Click here to update!</a>
 </section>
