updated settings form to error if the password is incorrect:

--- a/views/pages/settings.handlebars
+++ b/views/pages/settings.handlebars
@@ -6,7 +6,7 @@
         <p>Age: {{{age}}}</p>
 
     	{{#if taken}}
-            <p>You either put in an email that was taken or you did not put in new input.<br>
+            <p class="error">You either put in an email that was taken, you did not put in new input, or you put in the wrong password.<br>
             Feel free to click the link below and try again!</p>
 	    {{/if}}
 
