fixed a bug in the settings and app

--- a/views/pages/updateApp.handlebars
+++ b/views/pages/updateApp.handlebars
@@ -18,7 +18,7 @@
         <label for="ageInput" id="age">Age</label>
         <input id="ageInput" type="number" name = "ageInput"> <br>
 
-        <label for="phoneInput" id="phone">Phone Number</label>
+        <label for="phoneInput" id="phone">Phone Number (in the form of XXX-XXX-XXXX)</label>
         <input id="phoneInput" type="tel" name = "phoneInput" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"> <br>   
 
         <label for="livingAccommodationsInput" id="accommodations">What best describes your living situation?</label>
