--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -1,5 +1,29 @@
 <section>
 	<a href="/filter">Search</a>
+	<form id="filter-form" method="post" action="/">
+		<fieldset id="weightinput" hidden>
+			<legend>Filter Weight</legend>
+			<label for="minweight">Minimum Weight in Pounds</label>
+			<input
+				id="minweight"
+				type="number"
+				name="weightinput"
+				value="0"
+				min="0"
+				max="500"
+			/>
+			<br /><label for="maxweight">Maximum Weight in Pounds</label>
+			<input
+				id="maxweight"
+				type="number"
+				name="weightinput"
+				value="500"
+				min="0"
+				max="500"
+			/>
+		</fieldset>
+		<button id="filterButton" type="submit">Reset Filter</button>
+	</form>
 	<h1>All Dogs</h1>
 	{{#each dogs}}
 		<article class="dog">
