fixed wording issues for application

--- a/views/pages/updateApp.handlebars
+++ b/views/pages/updateApp.handlebars
@@ -130,7 +130,7 @@
             <label for="otherYard">Other</label> <br>
         </fieldset> --}}
 
-        <label for="reasoningInput" id="reasoning">What other information would you like us to know about you?</label>
+        <label for="reasoningInput" id="reasoning">Why do you want this dog?</label>
         <input id="reasoningInput" type="text" name = "reasoningInput"> <br>  
 
         <button id="appButton" type="submit">Submit</button>
