--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -11,7 +11,7 @@
         <p>Time you would be away from your dog (in hours): {{{timeAlone}}}</p>
         <p>How many pets you already have: {{{animals}}}</p>
         <p>Do you have a fenced in backward: {{{yard}}}</p>
-        <p>Why do you want this dog: {{{reasoningExperience}}}</p>
+        <p>Why you want this dog: {{{reasoningExperience}}}</p>
 
         <a href = "/account/application/edit">Click here to update your application!</a>
 
