updated wording of registration form

--- a/views/pages/registerForm.handlebars
+++ b/views/pages/registerForm.handlebars
@@ -6,7 +6,7 @@
         <input type="text" id="lastNameInput" name="lastNameInput">
         <label for="emailAddressInput">Email:</label>
         <input type="email" id="emailAddressInput" name="emailAddressInput">
-        <label for="passwordInput">Password:</label>
+        <label for="passwordInput">Password (must have at least 8 characters, 1 special character, 1 number, and 1 capital letter):</label>
         <input type="password" id="passwordInput" name="passwordInput">
         <label for="confirmPasswordInput">Confirm Password:</label>
         <input type="password" id="confirmPasswordInput" name="confirmPasswordInput">
