--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -1,8 +1,13 @@
 <section>
     <h1>Your Resources</h1>
+    <h2>My Application Statuses</h2>
+    <p>
+        Pending: {{{pending}}} <br>
+        Accepted: {{{accepted}}} <br>
+        Rejected: {{{rejected}}} <br>
+    </p>
 
-    <!-- maybe make these into larger buttons present on the page --> 
-
+    <h2>Links & Forms</h2>
     <a href="/account/settings/get">Click here to see your settings!</a> <br>
     <a href="/account/quiz">Click here to access our quiz!</a> <br>
     <a href="/account/dogs">Click here to see the dogs you posted!</a> <br>
