Finished Create Dog Post

--- a/views/pages/singledog.handlebars
+++ b/views/pages/singledog.handlebars
@@ -4,7 +4,7 @@
 	<address>Owner: {{user.firstName}} {{user.lastName}}</address>
 
 	{{#each dog.pictures}}
-		<img src="{{this}}" />
+		<img src="{{url}}" />
 	{{/each}}
 
 	<h3>Sex:</h3>
