--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -26,11 +26,17 @@
 	</form>
 	<h1>All Dogs</h1>
 	{{#each dogs}}
-		{{#if dogs.adopted}}{{else}}
-			<article class="dog">
+		{{#if adopted}}{{else}}
+			<article id="{{_id}}" class="dog">
 				<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
 				{{!-- <img src="{{pictures[0]}}" /> --}}
 			</article>
+			{{#if signedIn}}
+				<script>
+					if(user.disliked.includes(_id)) { document.getElementById(_id).hidden
+					= true; console.log("HELP")}
+				</script>
+			{{/if}}
 		{{/if}}
 	{{/each}}
 </section>
