--- a/views/pages/singledog.handlebars
+++ b/views/pages/singledog.handlebars
@@ -60,4 +60,11 @@
 	<h3>Likes:</h3>
 	<p>{{dog.likes}}</p>
 
+	{{#if signedIn}}
+		<form id="ignore-form" method="post" action="/dogs/{{dog._id}}">
+			<input id="dogId" value={{dog._id}} name="dogId" hidden />
+			<!--<input id="userId" value={{user._id}} name="userId" hidden /> -->
+			<button id="ignorebutton" type="submit">Ignore Dog</button>
+		</form>
+	{{/if}}
 </article>
