Added more client side validation for add dog

--- a/views/pages/addDog.handlebars
+++ b/views/pages/addDog.handlebars
@@ -65,7 +65,7 @@
             <p class="error">Error: Please enter a valid vaccine!</p>
         </div>
 
-        <label for="photoInput">Photo:</label> <br>
+        <label for="photoInput">Photo (maximum of 3 photos):</label> <br>
         <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple/>
         <div id="error11" class="error" hidden>
             <p class="error">Error: Please enter a valid photo!</p>
