people can now comment on posts!

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,10 @@
 		</nav>
 
 		<main>
+			{{#if error}}
+				<p> You must be signed in to comment on posts</p>
+			{{/if}}
+
 			{{{body}}}
 		</main>
 		<script src="../../public/js/form.js"></script>
