--- a/views/pages/myDogs.handlebars
+++ b/views/pages/myDogs.handlebars
@@ -2,7 +2,7 @@
 	<h1>My Dogs</h1>
 	{{#each dogs}}
 		<article class="dog">
-			<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
+			<h2><a href="/account/dogs/{{_id}}">{{name}}</a></h2>
 			{{!-- <img src="{{pictures[0]}}" /> --}}
 		</article>
 	{{/each}}
