able to apply, update user's pending, and see app under dog

--- a/views/pages/singledog.handlebars
+++ b/views/pages/singledog.handlebars
@@ -76,9 +76,12 @@
 		<p>{{this}}</p>
 	{{/each}}
 
+	{{#if applyErr}}
+		<p>You either are not signed in, do not have a filled out application, or have already applied to this dog.</p>
+	{{/if}}
 	<h3>Apply for this dog:</h3>
-	<form id="apply-form" method="post">
-		<button type="submit" id="apply" value="applying">Apply Now!</button>
+	<form id="apply-form" method="post" action="/dogs/{{dog._id}}/apply">
+		<button type="submit" id="apply">Apply Now!</button>
 	</form>
 
 	{{#if signedIn}}
