--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -27,15 +27,19 @@
 	<h1>All Dogs</h1>
 	{{#each dogs}}
 		{{#if adopted}}{{else}}
-			<article id="{{_id}}" class="dog">
-				<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
-				{{!-- <img src="{{pictures[0]}}" /> --}}
-			</article>
-			{{#if signedIn}}
-				<script>
-					if(user.disliked.includes(_id)) { document.getElementById(_id).hidden
-					= true; console.log("HELP")}
-				</script>
+			{{#if ../signedIn}}
+				{{#if (includes ../user.disliked _id)}}
+				{{else}}
+					<article id="{{_id}}" class="dog">
+						<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
+						{{!-- <img src="{{pictures[0]}}" /> --}}
+					</article>
+				{{/if}}
+			{{else}}
+				<article id="{{_id}}" class="dog">
+					<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
+					{{!-- <img src="{{pictures[0]}}" /> --}}
+				</article>
 			{{/if}}
 		{{/if}}
 	{{/each}}
