Added links for pending, accepted, rejected

--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -4,17 +4,17 @@
 	<p>
 		Pending:
 		{{#each pending}}
-			<p>{{name}}</p>
+			<p><a href="/dogs/{{_id}}">{{name}}</a></p>
 		{{/each}}
 		<br />
 		Accepted:
 		{{#each accepted}}
-			<p>{{name}}</p>
+			<p><a href="/dogs/{{_id}}">{{name}}</a></p>
 		{{/each}}
 		<br />
 		Rejected:
 		{{#each rejected}}
-			<p>{{name}}</p>
+			<p><a href="/dogs/{{_id}}">{{name}}</a></p>
 		{{/each}}
 	</p>
 
