started code so people can see the applicants for their dog

--- a/views/pages/mySingleDog.handlebars
+++ b/views/pages/mySingleDog.handlebars
@@ -57,7 +57,7 @@
 	<p>{{dog.likes}}</p>
 
 	<a href="/account/dogs/{{dogId}}/edit">Click here to edit your dog post!</a> <br>
-    <a href="/account/dogs/{{dogId}}/applications">Click here to see your dog's applications </a><br>
+    <a href="/account/dogs/{{dogId}}/applications">Click here to see the applications for your dog!</a><br>
 
 	<form method="post" action="/account/dogs/{{dogId}}/delete?_method=DELETE">
   		<input type="hidden" name="_method" value="DELETE">
