--- a/views/pages/applicants.handlebars
+++ b/views/pages/applicants.handlebars
@@ -2,6 +2,17 @@
 
     <h1>Applicants for {{dog.name}}</h1>
     {{#each dog.interest}}
-        <p>{{this}}</p>
+        <h2>{{this.firstName}} {{this.lastName}}</h2>
+        <p>Age: {{this.age}}</p>
+        <p>Email: {{this.email}}</p>
+        <p>Phone Number: {{this.phone}}</p>
+        <p>Living Accommodations: {{this.livingAccommodations}}</p>
+        <p>How many children they have: {{this.children}}</p>
+        <p>How many hours the dog would be away: {{this.timeAlone}}</p> 
+        <p>How many pets they already have: {{this.animals}}</p>
+        <p>Why they want this dog: {{this.reasoningExperience}}</p>
+
+        <button id="accepted" value="accepted">Accept Application</button>
+        <button id="rejected" value="rejected">Reject Application</button>
     {{/each}}
 </section>
