--- a/views/pages/editDog.handlebars
+++ b/views/pages/editDog.handlebars
@@ -84,8 +84,8 @@
         <input id="currentNumPhotos" type="hidden" name="currentNumPhotos" value="{{dog.pictures.length}}"> <br>
 
         {{#each dog.pictures}}
-            <label>{{index}}:</label> <br/>
-            <img src="{{url}}"/> <br/>
+            <label>{{index}}:</label> <br>
+            <img src="{{url}}"/> <br>
         {{/each}}
 
         <label for="deletePhotoInput">Delete Photos (1-3 seperated by comma):</label>
