--- a/views/pages/mySingleDog.handlebars
+++ b/views/pages/mySingleDog.handlebars
@@ -56,7 +56,12 @@
 	<h3>Likes:</h3>
 	<p>{{dog.likes}}</p>
 
-	<a href="/account/dogs/{{dogId}}/edit">Click here to edit your dog post!</a> <br>
+	<!-- <a href="/account/dogs/{{dogId}}/edit">Click here to edit your dog post!</a> <br> -->
+
+	<form method="get" action="/account/dogs/{{dogId}}/edit">
+  		<button type="submit">Click here to edit your dog post!</button>
+	</form>
+	
     <a href="/account/dogs/{{dogId}}/applications">Click here to see the applications for your dog!</a><br>
 
 	<form method="post" action="/account/dogs/{{dogId}}/delete?_method=DELETE">
