Fixed script loading

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,6 @@
 			{{/if}}
 			{{{body}}}
 		</main>
-		<script src="../../public/js/form.js"></script>
-		<script src="../../public/js/edit-dog-form.js"></script>
+		<script src="/../../public/js/form.js"></script>
 	</body>
 </html>
