--- a/views/pages/mySingleDog.handlebars
+++ b/views/pages/mySingleDog.handlebars
@@ -58,9 +58,11 @@
 
 	<!-- <a href="/account/dogs/{{dogId}}/edit">Click here to edit your dog post!</a> <br> -->
 
-	<form method="get" action="/account/dogs/{{dogId}}/edit">
+	<a href="/account/dogs/{{dogId}}/edit">Click here to edit your dog post!</a>
+	<!-- <form method="get" action="/account/dogs/{{dogId}}/edit">
   		<button type="submit">Click here to edit your dog post!</button>
 	</form>
+	-->
 	
     <a href="/account/dogs/{{dogId}}/applications">Click here to see the applications for your dog!</a><br>
 
