--- a/views/pages/applicants.handlebars
+++ b/views/pages/applicants.handlebars
@@ -2,6 +2,7 @@
 
     <h1>Applicants for {{dog.name}}</h1>
     {{#each dog.interest}}
+
         <h2>{{this.firstName}} {{this.lastName}}</h2>
         <p>Age: {{this.age}}</p>
         <p>Email: {{this.email}}</p>
@@ -12,7 +13,16 @@
         <p>How many pets they already have: {{this.animals}}</p>
         <p>Why they want this dog: {{this.reasoningExperience}}</p>
 
-        <button id="accepted" value="accepted">Accept Application</button>
-        <button id="rejected" value="rejected">Reject Application</button>
+        <form id="accpeted-form" method="post" value="accepted">
+            <input id="accept" value="accepted" name="accept" hidden>
+            <input id="userId" value={{this.userId}} name="userId" hidden>
+            <button id="accepted" value="accepted">Accept Application</button>
+        </form>
+
+        <form id="reject-form" method="post" value="rejected">
+            <input id="reject" value="rejected" name="reject" hidden>
+            <input id="userId" value={{this.userId}} name="userId" hidden>
+            <button id="rejected" value="rejected">Reject Application</button>
+        </form>
     {{/each}}
 </section>
