users can't apply for their own dogs

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,11 @@
 			{{#if error}}
 				<p class = 'error'> You must be signed in to like or comment, and you can only like a post once!</p>
 			{{/if}}
+
+			{{#if own}}
+				<p class = 'error'>You can't apply to your own dog!</p>
+			{{/if}}
+			
 			{{{body}}}
 		</main>
 		<script src="/../../public/js/form.js"></script>
