--- a/views/pages/editDog.handlebars
+++ b/views/pages/editDog.handlebars
@@ -3,8 +3,14 @@
     <h2>Fill out the form items you want to change</h2>
     <form id="edit-dog-form" action="/account/dogs/{{dogId}}/edit?_method=PATCH" enctype="multipart/form-data" method="POST">
         <input type="hidden" name="_method" value="PATCH">
+        {{#if error}}
+            <div class="error">
+                <p class="error">{{error}}</p>
+            </div>
+        {{/if}}
+
         <div id="emptyError" class="error" hidden>
-            <p>At least 1 form item must be changed to fill out this form</p>
+            <p class="error">At least 1 form item must be changed to fill out this form</p>
         </div>
 
         <label for="nameInput">Name:</label>
@@ -15,8 +21,12 @@
         
         <label for="sexInput">Sex:</label>
         <select name="sexInput" id="sexInput">
-            <option value="female">Female</option>
+            <option value="">Original</option>
+            {{#if isFemale}}
             <option value="male">Male</option>
+            {{else}}
+            <option value="female">Female</option>
+            {{/if}}
         </select> <br>
         <div id="error2" class="error" hidden>
             <p class="error">Error: Please enter a valid sex! </p>
@@ -52,6 +62,7 @@
             <p class="error">Error: Please enter a valid description!</p>
         </div>
 
+        <h2>If you want to delete info, type delete:</h2>
         <label for="traitInput">Traits (separated by comma):</label> <br>
         <textarea id="traitInput" name="traitInput" rows="5" cols="50"></textarea> <br>
         <div id="error8" class="error" hidden>
@@ -70,19 +81,6 @@
             <p class="error">Error: Please enter a valid vaccine!</p>
         </div>
 
-        <label for="photoInput">Add Photo (maximum of 3 photos):</label> <br>
-        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple/>
-        <div id="error11" class="error" hidden>
-            <p class="error">Error: Please enter a valid photo!</p>
-        </div>
-        <div id="error12" class="error" hidden>
-            <p class="error">Error: Please enter less photos!</p>
-        </div>
-
-        <input id="numPhotos" type="hidden" name="numPhotos"> <br>
-
-        <input id="currentNumPhotos" type="hidden" name="currentNumPhotos" value="{{dog.pictures.length}}"> <br>
-
         {{#each dog.pictures}}
             <label>{{index}}:</label> <br>
             <img src="{{url}}"/> <br>
@@ -92,6 +90,18 @@
         <input type="text" id="deletePhotoInput" name="deletePhotoInput">
         <div id="error13" class="error" hidden>
             <p class="error">Error: Please enter a valid number!</p>
+        </div>
+
+        <input id="numPhotos" type="hidden" name="numPhotos">
+        <input id="currentNumPhotos" type="hidden" name="currentNumPhotos" value="{{dog.pictures.length}}"> <br>
+
+        <label for="photoInput">Add Photo (maximum of 3 photos):</label> <br>
+        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple/>
+        <div id="error11" class="error" hidden>
+            <p class="error">Error: Please enter a valid photo!</p>
+        </div>
+        <div id="error12" class="error" hidden>
+            <p class="error">Error: Please enter less photos!</p>
         </div>
 
         <button type="submit">Post</button>
