--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -18,7 +18,7 @@
     {{/if}}
 
     {{#if noApp}}
-            <p>You have not filled out an application!</p>
+            <h1>You have not filled out an application!</h1>
             <a href = "/account/application/edit">Click here to fill out an application!</a>
     {{/if}}
 </section>
