--- a/views/pages/mySingleDog.handlebars
+++ b/views/pages/mySingleDog.handlebars
@@ -1,8 +1,9 @@
 <article class="dog">
 
 	<h1>{{dog.name}}</h1>
+	<h2>Here's the information on {{dog.name}}</h2>
 	{{#each dog.pictures}}
-		<img src="{{url}}" />
+		<img alt="dog" src="{{url}}" />
 	{{/each}}
 
 	<h3>Sex:</h3>
