changed stuff for valid html

--- a/views/pages/editDog.handlebars
+++ b/views/pages/editDog.handlebars
@@ -96,7 +96,7 @@
         <input id="currentNumPhotos" type="hidden" name="currentNumPhotos" value="{{dog.pictures.length}}"> <br>
 
         <label for="photoInput">Add Photo (maximum of 3 photos):</label> <br>
-        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple/>
+        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple>
         <div id="error11" class="error" hidden>
             <p class="error">Error: Please enter a valid photo!</p>
         </div>
