--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -11,8 +11,8 @@
 				value="0"
 				min="0"
 				max="500"
-			/>
-			<br /><label for="maxweight">Maximum Weight in Pounds</label>
+			>
+			<br><label for="maxweight">Maximum Weight in Pounds</label>
 			<input
 				id="maxweight"
 				type="number"
@@ -20,7 +20,7 @@
 				value="500"
 				min="0"
 				max="500"
-			/>
+			>
 		</fieldset>
 		<button id="filterButton" type="submit">Reset Filter</button>
 	</form>
