--- a/views/pages/singledog.handlebars
+++ b/views/pages/singledog.handlebars
@@ -71,8 +71,8 @@
 	<form id="comment-form" method="post">
 		<label for="commentInput" id="comment">Post a comment here!</label>
 		<p id="popup" class="error" hidden>A comment cannot be empty!</p>
-		<input id="commentInput" type="text" name="commentInput" />
-		<br />
+		<input id="commentInput" type="text" name="commentInput">
+		<br>
 		<button type="submit">Submit</button>
 	</form>
 
