--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<title>My Site</title>
-		<link rel="stylesheet" href="/public/css/main.css" />
+		<link rel="stylesheet" href="/public/css/main.css">
 	</head>
 	<body>
 		<nav>
