--- a/views/pages/addDog.handlebars
+++ b/views/pages/addDog.handlebars
@@ -66,7 +66,7 @@
         </div>
 
         <label for="photoInput">Photo (maximum of 3 photos):</label> <br>
-        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple/>
+        <input name="file" type="file" id="photoInput" accept="image/png, image/jpeg" multiple>
         <div id="error11" class="error" hidden>
             <p class="error">Error: Please enter a valid photo!</p>
         </div>
