--- a/views/pages/loginForm.handlebars
+++ b/views/pages/loginForm.handlebars
@@ -1,4 +1,5 @@
 <Section>
+    <h1>Login</h1>
     <form method="post" id="login-form">
         <label for="emailAddressInput">Email:</label>
         <input type="email" id="emailAddressInput" name="emailAddressInput">
