updated bugs with rejected

--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -9,14 +9,12 @@
 		<br>
 		<p>Accepted:</p>
 		{{#each accepted}}
-			{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
 			<p>{{this}}</p>
 		{{/each}}
 		<br>
 		<p>Rejected:</p>
 		{{#each rejected}}
-			{{!-- <p><a href="/dogs/{{_id}}">{{name}}</a></p> --}}
-			<p>{{name}}</p>
+			<p>{{this}}</p>
 		{{/each}}
 	{{!-- </p> --}}
 
